<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaWifi</string>
    <string name="app_id">210286649104315</string>
    <string name="write_tag">Write to Tag</string>
    <string name="tag_read_only">Tag is read-only</string>
    <string name="tag_too_small">Tag does not have enough memory for message</string>
    <string name="tag_format_fail">NdefFormatable format fail</string>
    <string name="tag_format_connect_fail">NdefFormatable format.connect fail</string>
    <string name="tag_ndef_not_supported">Tag does not support NDEF</string>
    <string name="dialog_write_tag">Touch tag to write</string>
    <string name="dialog_enable_nfc_title">NFC is disabled</string>
    <string name="dialog_enable_nfc_msg">NFC needs to be enabled in order to read and write data from a NFC tag.  If you do not enable NFC, then the NFC features of this app will not work.</string>
    <string name="nfc_not_available">NFC is not available</string>
    <string name="beam_success">WiFi configuration successfully sent!</string>
    <string name="wifi_connect_success">Successfully connected to %1$s!</string>
    <string name="wifi_connect_fail">Failed to connect to WiFi network, please try again</string>
    <string name="invalid_wifi_sticker">WiFi sticker data is invalid.  Please rewrite WiFi sticker</string>
    <string name="write_tag_fail">Failed to write to tag, please try again</string>
    <string name="write_tag_success">WiFi configuration saved to tag!</string>
    <string name="wifi_connect_already">Already connected to %1$s, disabling WiFi</string>
    <string name="password_text">Password</string>
    <string name="protocol_text">Security</string>
    <string name="read_only_text">Make read-only</string>
    <string name="show_password_text">Show password</string>
    <string name="ssid_text">SSID</string>
    <string name="add_new_network">Add New Network</string>
    <string name="add_button">Add</string>
    <string name="cancel">Cancel</string>
    <string name="success">success</string>
    <string name="general_fail">Something bad happened</string>
    <string name="enable_wifi_fail">Failed to enable WiFi</string>
    <string name="add_new_network_fail">failed to add network</string>
    <string name="app_share_dialog_title">Share InstaWifi</string>
    <string name="app_share_subject">Check out InstaWifi, an Android app that lets you connect to WiFi networks instantly</string>
    <string name="app_share_text">Download InstaWifi on the Android Market (https://play.google.com/store/apps/details?id=net.jessechen.instawifi), it is a cool Android app that allows you to share and connect to WiFi networks instantly.</string>
    <string name="qr_code_image_description">qr code for selected WiFi</string>
    <string name="qr_share_fail">Failed to generate QR image :(</string>
    <string name="qr_share_subject">WiFi QR code for %1$s</string>
    <string name="qr_share_text">Scan this QR code to connect to the WiFi network \&quot;%1$s\&quot;.  For Android devices, use the \&quot;Barcode Scanner\&quot; app, download link ( https://play.google.com/store/apps/details?id=com.google.zxing.client.android ).\n\nThis QR code was generated via InstaWifi ( https://play.google.com/store/apps/details?id=net.jessechen.instawifi ).</string>
    <string name="qr_share_dialog_title">Share QR Code for \&quot;%1$s\&quot; via</string>
    <string name="show_wifi_add_title">Enable WiFi</string>
    <string name="show_wifi_msg_add">To add a new network, WiFi needs to be on.</string>
    <string name="enable">Enable</string>
    <string name="status_associating">Associating..</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_scanning">Scanning..</string>
    <string name="status_connected">Connected!</string>
    <string name="show_wifi_msg_default">This app requires WiFi to work.</string>
    <string name="updated_qr_code">QR code updated!</string>
    <string name="donate_not_supported">Your version of Google\'s Play Store does not support in-app billing. Sorry for the inconvenience.</string>
    <string name="donate_intro">Love the app? Donate to support the developer!</string>
    <string name="donate_explain"><b>USA/CANADA/MEXICO ONLY:</b> Donate 4$ and I will send you one Android NFC sticker as a gift.  6$ gets you 2, and 10$ gets you 4.  No additional shipping costs!</string>
    <string name="donate_button">Donate %1$s</string>
    <string name="donate_email_template">mailto:instawifi@jessechen.net?subject=%1$s&amp;body=%2$s</string>
    <string name="donate_email_subject_multi">Send me my NFC stickers! Order ID: %1$s</string>
    <string name="donate_email_subject_one">Send me my NFC sticker! Order ID: %1$s</string>
    <string name="donate_email_body">Hi Jesse,\n\nI\'m awesome for donating %1$d$.  Below is my name and address to send me my %2$d NFC sticker(s):\n\nName: \n\nAddress:\n\nI will make sure to contact you if I ever have any questions or comments.  Thanks!</string>
    <string name="donate_thank_you_stickers">Thank you so much for supporting an independent developer.  Email me your name and address so you can enjoy your Android NFC sticker(s)!</string>
    <string name="donate_thank_you">Hi, thank you so much for supporting an independent developer.  You are awesome!</string>
    <string name="action_share">Share App/QR Code</string>
    <string name="action_edit">Add New Network</string>
    <string name="action_donate">Donate</string>
    <string name="action_help">Help</string>
    <string name="help_contact_title">Contact the developer:</string>
    <string name="help_contact_link">instawifi@jessechen.net</string>
    <string name="help_tutorial_title">Watch a YouTube tutorial:</string>
    <string name="help_tutorial_link">http://www.youtube.com/watch?v=0PChSvKGIo8</string>
    <string name="help_nfc">Instructions for the NFC tab:\n1) Choose the network to configure or add a new network from menu.\n2) Fill out all the network details.\n3) Tap the "Write to Tag" button.\n4) Tap NFC sticker to write to tag\n5) Connect to that WiFi network by tapping on the sticker.\n6) Tap again to disable WiFi.\n<b>Android Beam:</b> Fill out network details and hold the phone against another NFC-enabled Android smartphone with InstaWifi installed to automatically connect the other phone to the network.</string>
    <string name="help_qr">Instructions for the QR tab:\n1) Choose the network to configure or add a new network from menu.\n2) Fill out all the network details.\n3) Share the created QR image by tapping on the share icon in the menu.\n4) Any Android smartphone with the Barcode Scanner app (https://play.google.com/store/apps/details?id=com.google.zxing.client.android) can now scan the QR image to connect to that WiFi network.</string>
    <string name="help_donate">Your donation will support an independent developer who wants to make life easier for people like you by writing Android apps.  If you live in USA, Canada or Mexico, then as a token of appreciation I will send you a Android-themed NFC sticker as a gift if you donate 4$, 2 for 6$, and if you\'re awesome, 4 for 10$.  After going through the in-app billing system, your email application will launch.  Just fill out the email and I will ship your Android-themed stickers to you as soon as possible.  Thanks!</string>
    <string name="fb_url">http://www.facebook.com/instawifi</string>
    <string name="twitter_url">http://www.twitter.com/instawifi</string>
    <string name="publish_og">Publish connect to wifi actions to Facebook</string>

</resources>