<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/container_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/nfc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/b_write_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:drawablePadding="-25dp"
                android:drawableTop="@drawable/wifi"
                android:text="@string/write_tag" />

            <com.gridlayout.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:gridlayout="http://schemas.android.com/apk/res/net.jessechen.instawifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                gridlayout:alignmentMode="alignBounds"
                gridlayout:columnCount="2"
                gridlayout:columnOrderPreserved="false"
                gridlayout:useDefaultMargins="true" >

                <TextView
                    android:id="@+id/ssid_text"
                    style="@style/white_inset_shadow"
                    android:layout_column="0"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:layout_row="0"
                    android:text="@string/ssid_text" />

                <Spinner
                    android:id="@+id/network_spinner"
                    android:layout_column="1"
                    android:layout_margin="4dp"
                    android:layout_row="0" />

                <TextView
                    android:id="@+id/security_text"
                    style="@style/white_inset_shadow"
                    android:layout_column="0"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:layout_row="1"
                    android:text="@string/protocol_text" />

                <Spinner
                    android:id="@+id/protocol_spinner"
                    android:layout_column="1"
                    android:layout_margin="4dp"
                    android:layout_row="1" />

                <TextView
                    android:id="@+id/password_text"
                    style="@style/white_inset_shadow"
                    android:layout_column="0"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:layout_row="2"
                    android:text="@string/password_text" />

                <EditText
                    android:id="@+id/password_field"
                    android:layout_margin="4dp"
                    android:ems="7"
                    android:inputType="textPassword" />
            </com.gridlayout.GridLayout>

            <CheckBox
                android:id="@+id/password_checkbox"
                style="@style/white_inset_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/show_password_text" />
        </LinearLayout>
    </FrameLayout>

</ScrollView>